# GAN-based-data-augmentation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  leakage_safe.toml  paper_figure.toml
data/: README.md
data/synthetic/: README.md
docs/: data_contract.md  implementation_map.md  reproducibility_audit.md  workflow.md
docs/decisions/: 0001-pytorch-maintained-implementation.md
legacy/: CNNforSouthgan.py  README.md  data_loader(1).py  read_data.ipynb  srgan(1).py  srgan_1.py
scripts/: check_public_repo.py
src/ree_prospectivity/: __init__.py  __main__.py  augmentation.py  cli.py  config.py  evaluation.py  inference.py  metrics.py  preprocessing.py  reproducibility.py  splitting.py
src/ree_prospectivity/data/: __init__.py  contracts.py  downscaling.py  synthetic.py
src/ree_prospectivity/models/: __init__.py  classifier.py  common.py  discriminator.py  generator.py
src/ree_prospectivity/pipeline/: __init__.py  artifacts.py  backend.py  in_memory_backend.py  manifest.py  plan.py  runner.py
src/ree_prospectivity/training/: __init__.py  classifier.py  gan.py
tests/: test_config.py  test_data.py  test_metrics.py  test_models.py  test_package.py  test_public_repo_guard.py  test_reproducibility.py
