[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ree-prospectivity"
version = "0.1.0"
description = "Reproducible GAN-augmented mineral prospectivity mapping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ree-prospectivity = "ree_prospectivity.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["legacy"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
